finish section delivery

--- a/src/home.html
+++ b/src/home.html
@@ -9,10 +9,46 @@
 		@@include('html/_header.htm',{})
 		<main class="page">
 
+			<section class="page__delivery delivery">
+				<div class="delivery__container">
+					<div class="delivery__inner">
+						<div class="delivery__item">
+							<div class="delivery__block">
+								<div class="delivery__subtitle">PIZZA DELIVERY</div>
+								<div class="delivery__title">Get Started Today!</div>
+								<div class="delivery__desc">Everything you need to build an amazing food restaurant responsive website.</div>
+								<div class="delivery__text">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis.</div>
+								<div class="delivery__services services">
+									<div class="services__card">
+										<div class="services__logo">
+											<img src="@img/delivery/01.svg" alt="Food Order">
+										</div>
+										<div class="services__title">Food Order</div>
+										<div class="services__desc">Food is the necessity of life. It provides nutrition, sustenance growth to human body.</div>
+									</div>
+									<div class="services__card">
+										<div class="services__logo">
+											<img src="@img/delivery/02.svg" alt="Food Order">
+										</div>
+										<div class="services__title">Promote Restaurant</div>
+										<div class="services__desc">Food can be classified into cereals, pulses, nuts and oilseeds, vegetable</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="delivery__item">
+							<div class="delivery__image">
+								<img src="@img/delivery/01.png" alt="girl image">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<section class="page__team team">
 				<div class="team__container">
 					<div class="team__inner">
-						<div class="team__subtitle">TEAM MEMBERS</div>
+						<div class="team__subtitle subtitle">TEAM MEMBERS</div>
 						<div class="team__title">Meet Our Best Team</div>
 						<div class="team__content">
 							<div class="team__item">
