finish section outlet

--- a/src/home.html
+++ b/src/home.html
@@ -9,6 +9,87 @@
 		@@include('html/_header.htm',{})
 		<main class="page">
 
+
+			<section class="page__servises servises">
+				<div class="servises__container">
+					<div class="servises__inner"> <!--блок для ограничения ширины в 900px-->
+						<div class="servises__row"> <!--будущий flex-контейнер-->
+							<div class="servises__column"> <!--колонки-->
+								<div class="servises__item"> <!--создаем саму карточку flex-элемент-->
+									<div class="servises__image">
+										<img src="@img/service/01.svg" alt="car">
+									</div> <!--заголовок в карточке-->
+									<div class="servises__title">Free Shipping on First Order</div> <!--подзаголовок в карточке-->
+									<div class="servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+								</div>
+							</div>
+							<div class="servises__column"> <!--колонки-->
+								<div class="servises__item"> <!--создаем саму карточку flex-элемент-->
+									<div class="servises__image">
+										<img src="@img/service/02.svg" alt="car">
+									</div> <!--заголовок в карточке-->
+									<div class="servises__title">Variety of Dishes</div> <!--подзаголовок в карточке-->
+									<div class="servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+								</div>
+							</div>
+							<div class="servises__column"> <!--колонки-->
+								<div class="servises__item"> <!--создаем саму карточку flex-элемент-->
+									<div class="servises__image">
+										<img src="@img/service/03.svg" alt="car">
+									</div> <!--заголовок в карточке-->
+									<div class="servises__title">Thirty Minutes Delivery</div> <!--подзаголовок в карточке-->
+									<div class="servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="page__outlet outlet">
+				<div class="outlet__container">
+					<div class="outlet__inner">
+						<div class="outlet__subtitle">OUR OUTLETS</div>
+						<div class="outlet__title">Find an Outlet Near You</div>
+						<div class="outlet__content">
+							<div class="outlet__item">
+								<div class="outlet__card">
+									<div class="outlet__image">
+										<img src="@img/outlet/01.jpg" alt="cafe">
+									</div>
+									<div class="outlet__location">
+										<img src="@img/outlet/icon-location.svg" alt="">
+									</div>
+									<div class="outlet__address">762 Fulton St San Francisco, <br>California(CA), 94102</div>
+								</div>
+
+
+								<div class="outlet__card">
+									<div class="outlet__image">
+										<img src="@img/outlet/02.jpg" alt="cafe">
+									</div>
+									<div class="outlet__location">
+										<img src="@img/outlet/icon-location.svg" alt="">
+									</div>
+									<div class="outlet__address">66 Ceres St San Francisco, <br>California(CA), 94124</div>
+								</div>
+
+
+								<div class="outlet__card">
+									<div class="outlet__image">
+										<img src="@img/outlet/03.jpg" alt="cafe">
+									</div>
+									<div class="outlet__location">
+										<img src="@img/outlet/icon-location.svg" alt="">
+									</div>
+									<div class="outlet__address">766 Sutter St San Francisco, <br>California(CA), 94109</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<section class="page__delivery delivery">
 				<div class="delivery__container">
 					<div class="delivery__inner">
@@ -48,7 +129,7 @@
 			<section class="page__team team">
 				<div class="team__container">
 					<div class="team__inner">
-						<div class="team__subtitle subtitle">TEAM MEMBERS</div>
+						<div class="team__subtitle">TEAM MEMBERS</div>
 						<div class="team__title">Meet Our Best Team</div>
 						<div class="team__content">
 							<div class="team__item">
