finish section servises

--- a/src/home.html
+++ b/src/home.html
@@ -9,36 +9,35 @@
 		@@include('html/_header.htm',{})
 		<main class="page">
 
-
 			<section class="page__servises servises">
 				<div class="servises__container">
-					<div class="servises__inner"> <!--блок для ограничения ширины в 900px-->
-						<div class="servises__row"> <!--будущий flex-контейнер-->
-							<div class="servises__column"> <!--колонки-->
-								<div class="servises__item"> <!--создаем саму карточку flex-элемент-->
-									<div class="servises__image">
+					<div class="servises__content">
+						<div class="servises__items">
+							<div class="servises__column">
+								<div class="servises__item item-servises">
+									<div class="item-servises__icon">
 										<img src="@img/service/01.svg" alt="car">
-									</div> <!--заголовок в карточке-->
-									<div class="servises__title">Free Shipping on First Order</div> <!--подзаголовок в карточке-->
-									<div class="servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+									</div>
+									<div class="item-servises__title">Free Shipping on First Order</div> <!--подзаголовок в карточке-->
+									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
 								</div>
 							</div>
-							<div class="servises__column"> <!--колонки-->
-								<div class="servises__item"> <!--создаем саму карточку flex-элемент-->
-									<div class="servises__image">
-										<img src="@img/service/02.svg" alt="car">
-									</div> <!--заголовок в карточке-->
-									<div class="servises__title">Variety of Dishes</div> <!--подзаголовок в карточке-->
-									<div class="servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+							<div class="servises__column">
+								<div class="servises__item item-servises">
+									<div class="item-servises__icon">
+										<img src="@img/service/02.svg" alt="burger">
+									</div>
+									<div class="item-servises__title">Variety of Dishes</div> <!--подзаголовок в карточке-->
+									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
 								</div>
 							</div>
-							<div class="servises__column"> <!--колонки-->
-								<div class="servises__item"> <!--создаем саму карточку flex-элемент-->
-									<div class="servises__image">
-										<img src="@img/service/03.svg" alt="car">
-									</div> <!--заголовок в карточке-->
-									<div class="servises__title">Thirty Minutes Delivery</div> <!--подзаголовок в карточке-->
-									<div class="servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+							<div class="servises__column">
+								<div class="servises__item item-servises">
+									<div class="item-servises__icon">
+										<img src="@img/service/03.svg" alt="watch">
+									</div>
+									<div class="item-servises__title">Thirty Minutes Delivery</div> <!--подзаголовок в карточке-->
+									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
 								</div>
 							</div>
 						</div>
