finish section categories

--- a/src/home.html
+++ b/src/home.html
@@ -9,6 +9,47 @@
 		@@include('html/_header.htm',{})
 		<main class="page">
 
+			<section class="page__categories categories">
+				<div class="categories__container">
+					<div class="categories__inner">
+						<div class="categories__subtitle">TEAM MEMBERS</div>
+						<div class="categories__title">Meet Our Best Team</div>
+						<div class="categories__content">
+							<div class="categories__item">
+								<div class="categories__card">
+									<div class="categories__image">
+										<img src="@img/categories/01.png" alt="">
+									</div>
+									<div class="categories__name">Pizza</div>
+									<div class="categories__desc">20 Restaurants Foods</div>
+								</div>
+								<div class="categories__card">
+									<div class="categories__image">
+										<img src="@img/categories/02.png" alt="">
+									</div>
+									<div class="categories__name">Pasta</div>
+									<div class="categories__desc">15 Restaurants Foods</div>
+								</div>
+								<div class="categories__card">
+									<div class="categories__image">
+										<img src="@img/categories/03.png" alt="">
+									</div>
+									<div class="categories__name">Shakes</div>
+									<div class="categories__desc">20 Restaurants Foods</div>
+								</div>
+								<div class="categories__card">
+									<div class="categories__image">
+										<img src="@img/categories/04.png" alt="">
+									</div>
+									<div class="categories__name">Burger</div>
+									<div class="categories__desc">25 Restaurants Foods</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<section class="page__servises servises">
 				<div class="servises__container">
 					<div class="servises__content">
