удалил лишние фото

--- a/src/home.html
+++ b/src/home.html
@@ -12,8 +12,8 @@
 			<section class="page__categories categories">
 				<div class="categories__container">
 					<div class="categories__inner">
-						<div class="categories__subtitle">TEAM MEMBERS</div>
-						<div class="categories__title">Meet Our Best Team</div>
+						<div class="categories__subtitle">TOP FOODS</div>
+						<div class="categories__title">Our Categories</div>
 						<div class="categories__content">
 							<div class="categories__item">
 								<div class="categories__card">
