Чуток подправил burger

--- a/src/home.html
+++ b/src/home.html
@@ -9,6 +9,34 @@
 		@@include('html/_header.htm',{})
 		<main class="page">
 
+			<section class="page__first first">
+
+				<div class="first__container">
+					<div class="first__inner">
+						<div class="first__content">
+							<div class="first__box">
+								<div class="first__price">Only $15.00</div>
+								<div class="first__title">AUTHENTIC ITALIAN PIZZA</div>
+								<div class="first__row">
+									<div class="first__discount">20% <br>discount</div>
+									<div class="first__desc">On your first order, if you order online through our
+										App!
+									</div>
+								</div>
+								<div class="first__btn">
+									<a class="first__button button">ORDER ONLINE</a>
+								</div>
+								<!-- <a class="first__button button">ORDER ONLINE</a> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="first__image-ibg">
+					<img src="@img/header/pizza.png" alt="pizza">
+				</div>
+
+			</section>
+
 			<section class="page__categories categories">
 				<div class="categories__container">
 					<div class="categories__inner">
@@ -59,8 +87,11 @@
 									<div class="item-servises__icon">
 										<img src="@img/service/01.svg" alt="car">
 									</div>
-									<div class="item-servises__title">Free Shipping on First Order</div> <!--подзаголовок в карточке-->
-									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+									<div class="item-servises__title">Free Shipping on First Order</div>
+									<!--подзаголовок в карточке-->
+									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing
+										elit,
+										sed do eiusmod</div> <!--текст в карточке-->
 								</div>
 							</div>
 							<div class="servises__column">
@@ -68,8 +99,11 @@
 									<div class="item-servises__icon">
 										<img src="@img/service/02.svg" alt="burger">
 									</div>
-									<div class="item-servises__title">Variety of Dishes</div> <!--подзаголовок в карточке-->
-									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+									<div class="item-servises__title">Variety of Dishes</div>
+									<!--подзаголовок в карточке-->
+									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing
+										elit,
+										sed do eiusmod</div> <!--текст в карточке-->
 								</div>
 							</div>
 							<div class="servises__column">
@@ -77,8 +111,11 @@
 									<div class="item-servises__icon">
 										<img src="@img/service/03.svg" alt="watch">
 									</div>
-									<div class="item-servises__title">Thirty Minutes Delivery</div> <!--подзаголовок в карточке-->
-									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</div> <!--текст в карточке-->
+									<div class="item-servises__title">Thirty Minutes Delivery</div>
+									<!--подзаголовок в карточке-->
+									<div class="item-servises__text">Lorem ipsum dolor sit amet, consectetur adipisicing
+										elit,
+										sed do eiusmod</div> <!--текст в карточке-->
 								</div>
 							</div>
 						</div>
@@ -100,7 +137,8 @@
 									<div class="outlet__location">
 										<img src="@img/outlet/icon-location.svg" alt="">
 									</div>
-									<div class="outlet__address">762 Fulton St San Francisco, <br>California(CA), 94102</div>
+									<div class="outlet__address">762 Fulton St San Francisco, <br>California(CA), 94102
+									</div>
 								</div>
 
 
@@ -111,7 +149,8 @@
 									<div class="outlet__location">
 										<img src="@img/outlet/icon-location.svg" alt="">
 									</div>
-									<div class="outlet__address">66 Ceres St San Francisco, <br>California(CA), 94124</div>
+									<div class="outlet__address">66 Ceres St San Francisco, <br>California(CA), 94124
+									</div>
 								</div>
 
 
@@ -122,7 +161,8 @@
 									<div class="outlet__location">
 										<img src="@img/outlet/icon-location.svg" alt="">
 									</div>
-									<div class="outlet__address">766 Sutter St San Francisco, <br>California(CA), 94109</div>
+									<div class="outlet__address">766 Sutter St San Francisco, <br>California(CA), 94109
+									</div>
 								</div>
 							</div>
 						</div>
@@ -137,22 +177,32 @@
 							<div class="delivery__block">
 								<div class="delivery__subtitle">PIZZA DELIVERY</div>
 								<div class="delivery__title">Get Started Today!</div>
-								<div class="delivery__desc">Everything you need to build an amazing food restaurant responsive website.</div>
-								<div class="delivery__text">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis.</div>
+								<div class="delivery__desc">Everything you need to build an amazing food restaurant
+									responsive
+									website.</div>
+								<div class="delivery__text">Hendrerit in vulputate velit esse molestie consequat, vel
+									illum
+									dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
+									qui
+									blandit praesent luptatum zzril delenit augue duis.</div>
 								<div class="delivery__services services">
 									<div class="services__card">
 										<div class="services__logo">
 											<img src="@img/delivery/01.svg" alt="Food Order">
 										</div>
 										<div class="services__title">Food Order</div>
-										<div class="services__desc">Food is the necessity of life. It provides nutrition, sustenance growth to human body.</div>
+										<div class="services__desc">Food is the necessity of life. It provides
+											nutrition,
+											sustenance growth to human body.</div>
 									</div>
 									<div class="services__card">
 										<div class="services__logo">
 											<img src="@img/delivery/02.svg" alt="Food Order">
 										</div>
 										<div class="services__title">Promote Restaurant</div>
-										<div class="services__desc">Food can be classified into cereals, pulses, nuts and oilseeds, vegetable</div>
+										<div class="services__desc">Food can be classified into cereals, pulses, nuts
+											and
+											oilseeds, vegetable</div>
 									</div>
 								</div>
 							</div>
