--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,5 +1,34 @@
 <header class="header">
 	<div class="header__container">
+		<a href="#" class="header__logo">FOODMOOD</a>
 
+		<nav class="header__menu menu">
+			<div class="menu__body">
+				<ul class="menu__list">
+					<li class="menu__item">
+						<a href="#" class="menu__link">Home</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">OUR MENU</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">OFFER</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">About</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">CONTACT</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<div data-da=".menu__list, 479" class="header__btn">
+			<a class="header__button button">DOWNLOAD APP</a>
+		</div>
+		<button class="icon-menu" type="button">
+			<span></span>
+		</button>
 	</div>
 </header>
