Finish. Есть желание footer шлифануть.

--- a/src/home.html
+++ b/src/home.html
@@ -10,7 +10,6 @@
 		<main class="page">
 
 			<section class="page__first first">
-
 				<div class="first__container">
 					<div class="first__inner">
 						<div class="first__content">
@@ -18,9 +17,12 @@
 								<div class="first__price">Only $15.00</div>
 								<div class="first__title">AUTHENTIC ITALIAN PIZZA</div>
 								<div class="first__row">
-									<div class="first__discount">20% <br>discount</div>
-									<div class="first__desc">On your first order, if you order online through our
-										App!
+									<div class="first__block">
+										<div class="first__percent">20%</div>
+										<div class="first__discount">discount</div>
+									</div>
+									<div class="first__desc">
+										On your first order, if you order online through our App!
 									</div>
 								</div>
 								<div class="first__btn">
