--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,13 @@
 			<div class="rootpage__info">
 				<h2>Особенности проекта</h2>
 				<ol class="rootpage__list">
-					<!-- <li>Проект одностраничный</li>		
+					<li>Проект одностраничный</li>
 					<li>Выполнена адаптивная верстка</li>
 					<li>Проект сделан на флексах</li>
-					<li>header зафиксирован липко</li>
+					<!-- <li>header зафиксирован липко</li> -->
 					<li>Есть меню бургер</li>
-					<li>Выполненено плавное перемещение по странице к нужной секции</li> -->
+					<li>Есть анимация</li>
+					<!-- <li>Выполненено плавное перемещение по странице к нужной секции</li> --> -->
 				</ol>
 			</div>
 			<h2>Готовые страницы:</h2>
