--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 					<!-- <li>header зафиксирован липко</li> -->
 					<li>Есть меню бургер</li>
 					<li>Есть анимация</li>
-					<!-- <li>Выполненено плавное перемещение по странице к нужной секции</li> --> -->
+					<!-- <li>Выполненено плавное перемещение по странице к нужной секции</li> -->
 				</ol>
 			</div>
 			<h2>Готовые страницы:</h2>
